[project]
name = "css"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "selenium>=4.31.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "transformers==4.40.2",
    "warcio>=1.7.5",
]
